--- a/project/index.html
+++ b/project/index.html
@@ -20,8 +20,8 @@
                     <li><a href="../w01-task.html">W1 Task</a></li>
                     <li><a href="../w03-task.html">W3 Task</a></li>
                     <li><a href="../w04-task.html">W4 Task</a></li>
-                    <li><a href="../w04-task.html">W5 Task</a></li>
-                    <li><a href="index.html" class="active">Project</a></li>
+                    <li><a href="../w05-task.html">W5 Task</a></li>
+                    <li><a href="./index.html" class="active">Project</a></li>
                   </ul>
             </nav>
         </header>
@@ -48,8 +48,8 @@
         <footer>
             &copy;<span id="year"></span> | Week 07 - Project | CSE 121b
           </footer>
-          <script src="/scripts/main.js"></script>
-          <script src="/project/scripts/fetch.js"></script>
+          <script src="../scripts/main.js"></script>
+          <script src="./scripts/fetch.js"></script>
           <script>
             document.getElementById("year").innerHTML = new Date().getFullYear();
           </script>
