Updated project files

--- a/project/index.html
+++ b/project/index.html
@@ -26,23 +26,8 @@
             </nav>
         </header>
         <main>
-            <h1 class="tools-title">Anime Fan Review</h1>
-            <div class="tools-grid">
-                <section class="tool">
-                    <h2>[Anime Title]</h2>
-                    <div>
-                        <img class="art-img" src="" alt="">
-                        <div class="side-section">
-                            <p class="side-quote">Every child is an artist. The problem is how to remain an artist once we grow up.</p>
-                            <span class="side-quote-source">Pablo Picasso</span>
-                            <div>
-                                <p>Through art, literature and music, our students learn to think critically, to empathize with others and to express themselves in creative ways.</p>
-                                <a class="read" href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
+            <h1>Anime Fan Review</h1>
+            <div id="anime-grid"></div>
             <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         </main>
         <footer>
